<package>
  <name>olleh_concert</name>
  <version>0.5.6</version>
  <description>
    Test concert
  </description>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon</maintainer>
  <license>BSD</license>
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rocon_service_admin</run_depend>
</package>